# simple-crosshair-overlay

./: .editorconfig  .gitignore  Cargo.toml  MAINTENANCE.md  README.md  build.rs  deny.toml
.github/: dependabot.yml
.github/workflows/: build.yml  ci.yml  publish.yml
benches/: README.md  benches.rs  color_picker.rs  hotkey.rs  icon.rs
crosshair-lib/: Cargo.toml  README.md
crosshair-lib/benches/: README.md  benches.rs  color_picker.rs  hotkey.rs  icon.rs
crosshair-lib/src/: lib.rs
crosshair-lib/src/hotkey/: hotkey_manager.rs  keycode.rs
crosshair-lib/src/platform/: mod.rs  windows.rs
crosshair-lib/src/util/: image.rs  numeric.rs
crosshair-lib/src/util/image/: mod.rs  naive.rs
docs/: crosshair-alignment.md
src/: custom_serializer.rs  linux.rs  main.rs  settings.rs  tray.rs  window.rs
src-lib/: lib.rs  settings.rs
src-lib/platform/: mod.rs  windows.rs
src-lib/private/: mod.rs  settings.rs
src-lib/private/hotkey/: hotkey_manager.rs  keycode.rs  mod.rs
src-lib/private/platform/: generic.rs  mod.rs  windows.rs
src-lib/private/util/: custom_serializer.rs  dialog.rs  mod.rs  numeric.rs
src-lib/private/util/image/: mod.rs  naive.rs  precise.rs
src-lib/util/: dialog.rs  numeric.rs
src-lib/util/image/: mod.rs
src/hotkey/: hotkey_manager.rs  keycode.rs  mod.rs
src/platform/: generic.rs  mod.rs  windows.rs
src/util/: image.rs  macros.rs  mod.rs  numeric.rs
tests/resources/: test_config.toml  test_config_image.toml  test_config_old.toml
