[package]
version = "1.1.2"
authors = ["Michael Ripley <zkxs00@gmail.com"]
edition = "2021"
license = "GPL-3.0-only"
name = "simple-crosshair-overlay"
description = "A simple native crosshair overlay"
readme = "README.md"
homepage = "https://github.com/zkxs/simple-crosshair-overlay"
repository = "https://github.com/zkxs/simple-crosshair-overlay"
documentation = "https://github.com/zkxs/simple-crosshair-overlay"
keywords = ["application", "overlay", "window", "crosshair"]
categories = []

[lib]
path = "src-lib/lib.rs"

[profile.release]
lto = "fat"
codegen-units = 1
strip = true # note that this breaks cargo-bloat, and I don't know any fix aside from commenting out this line
#debug = true # note that this is required for `cargo flamegraph`

[features]
benchmark = [] # used to compile reference functions only needed for benchmarking against

[dependencies]
tray-icon = { version = "0.13", default-features = false }
winit = "0.29"
softbuffer = "0.4"
serde = { version = "1", features = ["derive"] }
toml = "0.8.12"
directories = "5"
lazy_static = "1"
native-dialog = "0.7"
debug_print = "1"
png = "0.17"
device_query = "1"

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3", features = ["winuser", "windef", "minwindef"] }

[target.'cfg(target_os = "linux")'.dependencies]
gtk = "0.18" # must use this version of gtk because it's what tray-icon 0.10 needs

[target.'cfg(target_os = "windows")'.build-dependencies]
winres = "0.1"
ico = "0.3"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "benches"
harness = false
