[package]
version = "1.2.1"
authors = ["Michael Ripley <zkxs00@gmail.com"]
edition = "2024"
license = "GPL-3.0-only"
name = "simple-crosshair-overlay"
description = "A simple native crosshair overlay"
readme = "README.md"
repository = "https://github.com/zkxs/simple-crosshair-overlay"
keywords = ["application", "overlay", "window", "crosshair"]
categories = []

[lib]
path = "src-lib/lib.rs"

[profile.release]
lto = "fat"
codegen-units = 1
strip = true

[profile.release-optimized-debug]
inherits = "release"
strip = false # required for `cargo-bloat`
debug = true # required for `cargo flamegraph`, and makes `cargo-bloat` output significantly better

[features]
benchmark = [] # used to compile reference functions only needed for benchmarking against

[dependencies]
tray-icon = { version = "0.19", default-features = false }
winit = "0.30"
softbuffer = "0.4"
serde = { version = "1", features = ["derive"] }
toml = "0.8.12"
directories = "6"
lazy_static = "1"
native-dialog = "0.9"
debug_print = "1"
png = "0.17"
device_query = "=3.0.0" # pinned to 3.0.0 because 3.0.1 contains a breaking change

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3", features = ["winuser", "windef", "minwindef"] }

[target.'cfg(target_os = "linux")'.dependencies]
gtk = "0.18" # must use this version of gtk because it's what tray-icon 0.10 needs

[build-dependencies]
winres = "0.1"
ico = "0.4"

[dev-dependencies]
criterion = "0.6"

[[bench]]
name = "benches"
harness = false
