[package]
name = "crosshair-lib"
description = "Internal utilities used by simple-crosshair-overlay"
publish = false
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[features]
benchmark = [] # used to compile reference functions only needed for benchmarking against
slow-benchmark = [] # used to run slow benchmarks

[dependencies]
png = "0.17"
device_query = "1"
serde.workspace = true

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "benches"
harness = false
